Fix major issues with existing extension: make line-highlighter page layout independent with max z-index and css blend modes

--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,26 @@
+:root {
+  --default-height: 20px;
+}
+
 #line-marker {
 	position: absolute;
 	width: 100%;
-	height: 20px;
-	background-color: yellow;
-	z-index: -1000;
+	height: var(--default-height);
+	z-index: 2147483647;
 	display: none;
+	background-color: yellow;
+	mix-blend-mode: multiply;
 }
 
 #cursor {
 	position: relative;
-	width: 10px;
-	height: 16px;
-	margin: 2px;
-	margin-left: 0px;
+	width: 11px;
+	height: var(--default-height);
 	background-color: #C6C600;
-	display: none;
 }
 
 #controls {
-	width: 260px;
+	width: 400px;
 }
 
 #controls span {
